Fixed bug #32428 (The @ warning error supression operator is broken)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187732 c90b9560-bf6c-de11-be94-00142212c4b1